--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,24 @@ orbs:
   # aws-cli: circleci/aws-cli@2.0.3
 # Define the jobs we want to run for this project
 jobs:
+  # Exercise: Infrastructure Creation
+  # Exercise - Rollback
+  create_infrastructure: 
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run:
+          name: Create Cloudformation Stack
+          command: |
+            aws cloudformation deploy \
+              --template-file template.yml \
+              --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
+              --region us-east-1
+      # Fail the job intentionally to simulate an error.
+      # Uncomment the line below if you want to fail the current step
+      # - run: return 1
+      - destroy_environment
   configure_infrastructure: 
     docker:
       - image: python:3.7-alpine3.11
@@ -29,3 +47,4 @@ workflows:
   myWorkflow:
     jobs:
       - create_infrastructure
+      - configure_infrastructure
